--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+     
 <html>
 <h1>
     Html You
@@ -5,10 +6,16 @@
 <p> 
     Who am I?
     Thats a great question.
-</p>
+</P>
+<p>
+    I am ME: Migeul Eliotte. I am 18 Years old and I plan to get my bachelors in Computer Science. </p>
+<p>I attend Medgar Evers college and am currently really enjoying the bootcamp the school has offered me.</p>
+<p>I am really bad at talking about myself so heres some lorem to make the page look better Lorem: ipsum dolor sit, amet consectetur adipisicing elit. 
+    Dolorem cumque laborum sapiente tempora. Dolorum modi optio quo unde molestiae. Vero officiis numquam harum atque praesentium maxime eaque ab sit laboriosam?</p>
+   <br>
 <ul>
-    1. I am ME: Migeul Eliotte
-    2. 
+    1. 
+
 </ul>
 
 
