--- a/index.html
+++ b/index.html
@@ -1,23 +1,47 @@
      
 <html>
-<h1>
+
+<title>
     Html You
-</h1>
-<p> 
+</title>
+
+<h1> 
     Who am I?
     Thats a great question.
-</P>
+</h1>
+
 <p>
+
     I am ME: Migeul Eliotte. I am 18 Years old and I plan to get my bachelors in Computer Science. </p>
 <p>I attend Medgar Evers college and am currently really enjoying the bootcamp the school has offered me.</p>
 <p>I am really bad at talking about myself so heres some lorem to make the page look better Lorem: ipsum dolor sit, amet consectetur adipisicing elit. 
-    Dolorem cumque laborum sapiente tempora. Dolorum modi optio quo unde molestiae. Vero officiis numquam harum atque praesentium maxime eaque ab sit laboriosam?</p>
+    Dolorem cumque laborum sapiente tempora. Dolorum modi optio quo unde molestiae. <br> Vero officiis numquam harum atque praesentium maxime eaque ab sit laboriosam?</p>
    <br>
+   <p>
+       A list of things I like:
+   </p>
 <ul>
-    1. 
+    1. Video Games <img src="https://s.yimg.com/ny/api/res/1.2/dwmYi_rRrHyeIOk3CiTHfA--/YXBwaWQ9aGlnaGxhbmRlcjt3PTk2MDtoPTY0MA--/https://s.yimg.com/os/creatr-uploaded-images/2021-09/bd100ab0-0abb-11ec-bf3d-86a63775ab8a" width="50"><br>
+    2. Anime <img src="https://assets-prd.ignimgs.com/2021/09/09/jujutsu-1631147389461.jpg?width=1920" width="40"><br>
+    3. Running a code and getting no errors <img src="https://images.squarespace-cdn.com/content/v1/555e773de4b00d375caaf65d/1520780949947-H0TJBL064VV5LJK7WPND/do+girls+need+to+code+to+be+successful%3F" width="50"> <br>
 
 </ul>
-
-
-
+<h3>
+What are my goals and dreams? 
+</h3>
+<p>
+    My goals are too graduate college and get a good paying job that I don't dread walking into everyday.
+</p>
+<h4>
+    Whom do you wish were your mentors?
+</h4>
+<p>
+    I wish someone like Elon Musk where my mentor, because he has the work ethic of someone I wish I could compare too. I wonder how he fights off the pressure from everyone around him and just focuses on his goals.
+</p>
+<h4>
+    Where have you lived?
+</h4>
+<p>
+    I have lived all over the east coast. From Nyc to Orlando Florida even New Jersey.
+</p>
 </html>
