--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
  <!DOCTYPE html>
 <html>
     <head>
-        
+        <style> 
+            
+        </style>
     </head>
 <title>
     Html You
 </title>
-<div>
+<div id='Whi'>
     <h1> 
         Who am I?
         Thats a great question.
@@ -19,36 +21,42 @@
     <p>I am really bad at talking about myself so heres some lorem to make the page look better Lorem: ipsum dolor sit, amet consectetur adipisicing elit. 
         Dolorem cumque laborum sapiente tempora. Dolorum modi optio quo unde molestiae. <br> Vero officiis numquam harum atque praesentium maxime eaque ab sit laboriosam?</p>
     <br>
+</div>
+<div>
     <p>
         A list of things I like:
     </p>
     <ul>
-        <li> Video Games <img src="https://s.yimg.com/ny/api/res/1.2/dwmYi_rRrHyeIOk3CiTHfA--/YXBwaWQ9aGlnaGxhbmRlcjt3PTk2MDtoPTY0MA--/https://s.yimg.com/os/creatr-uploaded-images/2021-09/bd100ab0-0abb-11ec-bf3d-86a63775ab8a" width="50"></li><br>
-        <li> Anime <img src="https://assets-prd.ignimgs.com/2021/09/09/jujutsu-1631147389461.jpg?width=1920" width="50"> </li>   <br>
-        <li> Running a code and getting no errors <img src="https://images.squarespace-cdn.com/content/v1/555e773de4b00d375caaf65d/1520780949947-H0TJBL064VV5LJK7WPND/do+girls+need+to+code+to+be+successful%3F" width="50"> </li>  <br>
+        <li> Video Games<br> <img src="https://s.yimg.com/ny/api/res/1.2/dwmYi_rRrHyeIOk3CiTHfA--/YXBwaWQ9aGlnaGxhbmRlcjt3PTk2MDtoPTY0MA--/https://s.yimg.com/os/creatr-uploaded-images/2021-09/bd100ab0-0abb-11ec-bf3d-86a63775ab8a" width="100"></li><br>
+        <li> Anime <br><img src="https://assets-prd.ignimgs.com/2021/09/09/jujutsu-1631147389461.jpg?width=1920" width="100"> </li>   <br>
+        <li> Running a code and getting no errors <br><img src="https://images.squarespace-cdn.com/content/v1/555e773de4b00d375caaf65d/1520780949947-H0TJBL064VV5LJK7WPND/do+girls+need+to+code+to+be+successful%3F" width="100"> </li>  <br>
         <li> I enjoy not stressing as well </li>
     </ul>
     <h3>
-    What are my goals and dreams? 
+        What are my goals and dreams?<br>  <img src="https://miro.medium.com/max/600/1*TK691PgbAn7HN2U-s_Eyrw.jpeg" width="100">
     </h3>
     <ul>
         <ol>
             <li>.My goals are too graduate college</li>
             <li>.get a good paying job that I don't dread walking into everyday.</li>
+            <li> Create something that will get me rich and super successfull </li>
         </ol>
     </ul>
     <h2>
-        Whom do you wish were your mentors?
+        Whom do you wish were your mentors? <br><img src="https://i.redd.it/6vhj6pipe1131.png">
     </h2>
     <p>
-        I wish someone like Elon Musk where my mentor, because he has the work ethic of someone I wish I could compare too. I wonder how he fights off the pressure from everyone around him and just focuses on his goals. 
+        I wish someone like Elon Musk where my mentor, because he has the work ethic of someone I wish I could compare too. I wonder how he fights off the pressure from everyone around him and just focuses on his goals. <br>
+        Or maybe Tony Stark because why not.
     </p>
 
     <h4>
         Where have you lived?
     </h4>
     <p>
-        I have lived all over the east coast. From Nyc to Orlando Florida even New Jersey.
+        I have lived all over the east coast. <br>
+         From Nyc to Orlando Florida even New Jersey..
+
     </p>
 </div>
 </html>
